# HNDigest

./: .gitignore  .rubocop.yml  Cargo.toml  Dockerfile  Gemfile  LICENSE  README.md  configuration.rb  deploy.sh  deploy_rust_beta.sh  handler_script.rb  lambda_function.rb  lambda_handler.rb  mise.toml  notes.txt  test_mailer.rb  testing-plan.md
.github/: dependabot.yml
.github/actions/build-lambda/: action.yml
.github/workflows/: cd.yml  ci.yml  codeql.yml  opentofu-deploy.yml  promote-to-prod.yml  staging.yml
githooks/: README.md  pre-commit  pre-push
infrastructure/: .terraform.lock.hcl  README.md  alerts.tf  api_gateway.tf  dynamodb.tf  eventbridge.tf  github_oidc.tf  iam.tf  lambda.tf  landing_page.tf  locals.tf  main.tf  outputs.tf  ses.tf  sns.tf  sqs.tf  ssm.tf  terraform.tfvars.example  variables.tf  versions.tf
infrastructure/bootstrap/: .terraform.lock.hcl  github_oidc.tf  main.tf  outputs.tf  versions.tf
infrastructure/environments/production/: .terraform.lock.hcl  main.tf  variables.tf  versions.tf
infrastructure/environments/staging/: .terraform.lock.hcl  main.tf  outputs.tf  variables.tf  versions.tf
infrastructure/modules/alerts/: main.tf  variables.tf  versions.tf
infrastructure/modules/digest/: dynamodb.tf  eventbridge.tf  iam.tf  lambda.tf  outputs.tf  ses.tf  sns.tf  sqs.tf  ssm_kms.tf  variables.tf  versions.tf
infrastructure/modules/web/: api_gateway.tf  lambda.tf  landing_page.tf  outputs.tf  ssm.tf  variables.tf  versions.tf
jobs/: snapshot_posts_job.rb
lib/: digest_builder.rb  digest_mailer.rb  digest_renderer.rb  post_fetcher.rb  post_snapshotter.rb  storage_adapter.rb  strategy_factory.rb
lib/strategies/: over_point_threshold.rb  top_n_posts.rb
rust/: Cargo.toml
rust/src/: configuration.rs  digest_builder.rs  digest_mailer.rs  digest_renderer.rs  main.rs  post_fetcher.rs  post_snapshotter.rs  storage_adapter.rs  strategies.rs  types.rs
rust/templates/: digest.html
src/: bounce.rs  captcha.rs  digest_builder.rs  digest_mailer.rs  lib.rs  mailer.rs  main.rs  post_fetcher.rs  post_snapshotter.rs  storage.rs  storage_adapter.rs  strategies.rs  subscribe.rs  types.rs  unsubscribe.rs
src/api/: handlers.rs  mod.rs
src/storage/: dynamo.rs  mod.rs
static/: example.html  index.html  style.css  unsubscribe-error.html  unsubscribe-success.html  verify-error.html  verify-success.html
templates/: digest.html  digest.txt  preference_update.html  preference_update.txt  unsubscribe_confirm.html  verification.html  verification.txt
