[package]
name = "hndigest"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
name = "hndigest"
path = "src/main.rs"

[dependencies]
aws-config = { version = "1.1.7", features = ["rustls"] }
aws-sdk-dynamodb = "1.16.0"
aws-sdk-ses = "1.14.0"
lambda_runtime = "1.0.2"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
askama = "0.15"
anyhow = "1.0"
futures = "0.3"
