[package]
name = "hndigest"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
name = "hndigest"
path = "src/main.rs"

[[bin]]
name = "hndigest-api"
path = "src/bin/api.rs"

[[bin]]
name = "add-subscriber"
path = "src/bin/add_subscriber.rs"

[dependencies]
anyhow = "1.0"
askama = "0.15"
aws-config = { version = "1.1.7", features = ["rustls"] }
aws-sdk-dynamodb = "1.16.0"
aws-sdk-sesv2 = "1.14.0"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
lambda_http = "1.0.2"
lambda_runtime = "1.0.2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.0", features = ["v4"] }
