[package]
name = "hndigest"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
name = "hndigest"
path = "src/main.rs"

[[bin]]
name = "hndigest-api"
path = "src/bin/api.rs"

[[bin]]
name = "add-subscriber"
path = "src/bin/add_subscriber.rs"

[[bin]]
name = "hndigest-bounce-handler"
path = "src/bin/bounce_handler.rs"

[dependencies]
anyhow = "1.0"
email_address = "0.2"
askama = "0.15"
aws_lambda_events = { version = "1.0.3", default-features = false, features = ["sns"] }
aws-config = { version = "1.8.14", features = ["rustls"] }
aws-sdk-dynamodb = "1.107.0"
aws-sdk-sesv2 = "1.114.0"
aws-sdk-ssm = "1.106.0"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
lambda_http = "1.0.2"
lambda_runtime = "1.0.2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
urlencoding = "2.1"
uuid = { version = "1.21", features = ["v4"] }
