[package]
name = "hndigest"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = "1.1.7"
aws-sdk-dynamodb = "1.16.0"
aws-sdk-ses = "1.14.0"
lambda_runtime = "0.11.1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.11"
askama = "0.12"
anyhow = "1.0"
futures = "0.3.31"
